--- a/style.css
+++ b/style.css
@@ -3,54 +3,66 @@ body{
     background-color: #eaf4f4;
 }
 header {
-    background-color: #ffffff;
-    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    
+    align-items: center;
     text-align: center;
+    justify-content: space-between;
+    padding: 10px;
     
 }
+
 
 header img {
     position: absolute;
-    left: 60px;
-    top: 20px;
-    
     width: 40px;
     height: auto;
+    margin-right: 0px;
+}
+
+nav{
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav ul {
-    list-style: none;
+    display: flex;
+    flex-wrap: nowrap;
     padding: 0px;
    
     
 }
 
 nav ul li {
+    
     font-family: "Micro 5", serif;
     font-size: 40px;
     display: inline-flex;
-    margin-right: 35px;
-    margin-left: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
+    justify-content: center;
+    
+    
+    padding-right: 30px;
+    padding-left: 30px;
     border-right: 1px solid #ccc;
 }
 
 nav ul li:last-child{
     border-right: none;
-    margin-right: 0;
-    padding-right: 0;
+    padding-right: 30px;
+   
+    
 
 }
 
 nav ul li a {
-    
-    margin-right: 35px;
 
     text-decoration: none;
     color: #333;
 }
-
 
 .container {
     display: flex; 
@@ -130,7 +142,6 @@ nav ul li a {
     font-size: 40px;
 }
 
-
 .right-section {
     flex: 0.45;
     
@@ -149,7 +160,7 @@ nav ul li a {
     justify-content: center;
     position: relative; 
     top: 0px;
-    left: -15px;
+    left: -35px;
     
     
     
@@ -160,10 +171,80 @@ nav ul li a {
     display: flex;
     justify-content: center;
     position: relative;
-    left: 40px;
+    padding-left: 50px;
+    
 
     width: 70%;
     height: auto;
    
 }
+
+@media  screen  and (max-width:600px) {
+    nav{
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
+    }
+    header img {
+        width: 30px;
+        height: auto;}
+        
+    nav ul li:last-child{
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    nav ul li {
+        padding-right: 14.33px;
+        padding-left: 33px;
+        border-right: 1px solid #ccc;
+    }
+    .container{
+        display: flex;
+        flex-direction: column-reverse;
+        height: auto;
+    }
+    
+    .left-section{
+        width: 100%;
+        
+    }
+    #circle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    margin-left:auto ;
+    margin-right: auto;
+    position: static;
+    height: 180px;
+    width: 180px;
+    
+    
+   
+    
+    }
+    .plant {
+        width: 70%;
+        height: auto;
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: -23px;
+        
+    }
+
+   
+
+
+}
+
+
+
+
+
+
+
 
